@@ -1,3 +1,9 @@
+2008-06-06  Øyvind Kolås  <pippin@o-hand.com>
+
+	* clutter-box2d/clutter-box2d-actor.cpp: made the manipulatable state
+	work correctly by using the boolean paramspec, also keep a reference
+	to the actor to avoid the actor getting destroyed.
+
 2008-06-03  Øyvind Kolås  <pippin@o-hand.com>
 
 	* examples/scene-table.c: (scene_table): added a test scene with zero
